--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -33,6 +33,18 @@ $btn-border-green:#7DE0A5;
 $light-green:#E7FFF0;
 $btn-green-text:#0DAD4D;
 
+//08-1-24
+$white:#fff;
+$title-mix-blue:#2966FF;
+$light-dark-border:#2B2B2B;
+$static-blks-bg:#000101;
+$accordion-bg:#000;
+$accordion-border:#484848;
+$title-light:#2E4276;
+$para-color:#4D6090;
+$static-blks-light-bg:#fff;
+$static-blks-border:#A1BBFF;
+$accordion-light:#F8F8FF;
 //my variables
 $input-text-color:#4D6090;
 $blue-text-single:#3072F3;
@@ -43,6 +55,7 @@ $light-blue:#2966FF;
 $light-dark:#484D65;
 $orange:#EE8728;
 $dark-border:#484848;
+$static-blks-border:#A1BBFF;
 $bg-dark-blue:#1D355C;
 $light-grey-txt:#9E9E9E;
 
