--- a/scss/table.scss
+++ b/scss/table.scss
@@ -141,6 +141,7 @@
         .pagination{
             .page-item{
                 .page-link{
+                    line-height: 0;
                     margin: 0 4px;
                     // color: #ADC3DF;
                     color: #697F9B;
