--- a/css/table.css
+++ b/css/table.css
@@ -112,6 +112,7 @@
     color: #8393BA;
     font-size: 12px; }
   .table-pagination-cover .pagination-block .pagination .page-item .page-link {
+    line-height: 0;
     margin: 0 4px;
     color: #697F9B;
     font-size: 12px;
