--- a/scss/home-dark.scss
+++ b/scss/home-dark.scss
@@ -430,3 +430,152 @@
         border: 1px solid #3D72C5;
     }
 }
+
+// About page
+
+.theme-dark {
+    .news-sec .news-sec-cover {
+        border: 1px solid #1D2066;
+        background: linear-gradient(180deg, #111348 0%, #000 100%);
+    }
+
+    .news-sec .news-sec-cover .content-block h2,
+    .utility-sec .title-block h2,
+    .utility-sec .title-block p,
+    .utility-sec .utility-col-sec .det-list li,
+    .utility-sec .utility-col-sec .auth-det-card .name-block h4,
+    .utility-sec .utility-col-sec .auth-det-card .auth-abt {
+        color: $primary-light;
+    }
+
+    .news-sec .news-sec-cover .img-block .logo-sm img {
+        filter: grayscale(1) brightness(4);
+    }
+
+    .utility-sec .utility-col-sec .auth-det-card {
+        border: 1px solid #223A60;
+        background: linear-gradient(162deg, #0C0D30 7.72%, rgba(33, 56, 114, 0.00) 83.68%);
+    }
+
+    .utility-sec .utility-col-sec .auth-det-card .name-block .name-outline {
+        -webkit-text-stroke: 1px #151F4B;
+        -webkit-text-fill-color: transparent;
+    }
+
+    .utility-sec .utility-col-sec .auth-det-card .soc-block .auth-soc {
+        border-color: #191B4F;
+    }
+}
+
+.theme-dark{
+
+    .top-title{
+        color: $primary-light;
+        span{
+            color:#0C15F9;
+        }
+    }
+   
+    .sched-content{
+        p{
+            color: $primary-light;
+        }
+    }
+
+
+    .table-sec1{
+        
+        .table {
+            border: 1px solid #1B1D3E;
+            thead {
+                border-radius: 0px 0px 8px 8px;
+    
+                tr{
+                    background: linear-gradient(180deg, #171B5C 0%, #0D0F33 100%),
+                    linear-gradient(0deg, #1B2F4E, #1B2F4E);
+                    th{
+                        color: $primary-light;
+                    }
+                   
+                 
+                }
+            }
+
+            tbody{
+                tr{
+                    background-color:#000000;
+                    color: $primary-light;
+    
+                    &:nth-child(even) {
+                   
+                      background-color: #020310 ;
+            
+                      }        
+                }
+            }
+
+          
+        }
+    }
+}
+
+.theme-dark{
+    .props-token .title{
+        color: $white;
+    }
+    .props-token .benefits-listing li{
+        color: $white;
+    }
+    .props-accumulation .title{
+        color: $white;
+    }
+    .props-posts .title{
+        color: $white;
+    }
+    .props-posts .posts-hldr .post-wrp{
+        border: 1px solid #223A60;
+        background: linear-gradient(180deg, #0D0E31 45%, rgba(34, 55, 98, 0.00) 100%);
+    }
+    .props-posts .posts-hldr .post-content{
+        color: #fff;
+    }
+}
+
+
+.theme-dark{
+    .section-powering{
+        .title,
+        .subtitle{
+            color: #ffffff;
+        }
+    }
+
+    .section-tokenomics{
+        .title,
+        .subtitle{
+            color: #ffffff;
+        }
+    }
+    .section-powering .powering-list li,
+    .section-tokenomics .col-title,
+    .section-tokenomics .token-slider-wrp{
+        color: #ffffff;
+    }
+    .section-tokenomics .token-slider-wrp{
+        border-color: transparent;
+        background: linear-gradient(134.63deg, #0C0D30 3.25%, rgba(0, 0, 0, 0) 98.14%);
+    }
+    .section-tokenomics .token-slider-wrp .token-slider-ico{
+        background-color: rgba(25, 27, 79, 1);
+        border: 1px solid transparent;
+    }
+    .section-tokenomics .token-slider-wrp .token-slide-btns .btn{
+        border: 1px solid rgba(34, 38, 101, 1);
+        img{
+            filter: brightness(0) invert(1);
+        }
+    }
+    .section-powering .powering-list li:after{
+        opacity: 1;
+    }
+}
