--- a/css/home-page.css
+++ b/css/home-page.css
@@ -22,6 +22,7 @@
       padding: 0; } }
 
 .body-content-outer-home {
+  overflow: hidden;
   background-color: #fff;
   border-top: solid 1px #E3E4F3; }
   .body-content-outer-home .filter-wrapper {
@@ -1143,14 +1144,15 @@
       background: transparent;
       border: 0;
       margin-bottom: 19px;
-      overflow: clip; }
+      overflow: hidden;
+      border: 1px solid #fff;
+      border-radius: 12px; }
       @media (max-width: 1679px) {
         .section-faq .accordion .accordion-item {
           margin-bottom: 10px; } }
       .section-faq .accordion .accordion-item .accordion-button {
+        border: none !important;
         box-shadow: none !important;
-        border-radius: 27px;
-        border: 1px solid #fff;
         background-color: #F8F8FF;
         font-family: "Poppins", sans-serif;
         font-size: 20px;
@@ -1205,9 +1207,6 @@
               font-size: 25px; } }
         .section-faq .accordion .accordion-item .accordion-button:not(.collapsed) {
           background-color: #F8F8FF;
-          border-color: #fff;
-          border-bottom-color: transparent !important;
-          border-radius: 27px 27px 0px 0px;
           padding-bottom: 10px; }
           .section-faq .accordion .accordion-item .accordion-button:not(.collapsed):after {
             content: '-';
@@ -1218,14 +1217,12 @@
         padding-bottom: 40px;
         padding-left: 43px;
         padding-right: 43px;
-        border: 1px solid;
-        border-color: #fff;
-        border-top-color: transparent !important;
-        border-radius: 0px 0px 27px 27px;
+        border-top: 0;
         color: #4D6090;
         font-size: 14px;
         font-weight: 300;
-        line-height: 24px; }
+        line-height: 24px;
+        border: 0 !important; }
         @media (max-width: 1679px) {
           .section-faq .accordion .accordion-item .accordion-body {
             padding-left: 35px;
@@ -1856,7 +1853,7 @@
     font-size: 14px; } }
 @media (max-width: 767px) {
   .by-props-sec {
-    padding: 50px 0px; }
+    padding: 10px 0px 50px; }
     .by-props-sec .four-props {
       flex-wrap: wrap; }
       .by-props-sec .four-props .box-props {
@@ -2311,6 +2308,9 @@
     @media (max-width: 991px) {
       .section-partners .partners-container {
         margin-bottom: 20px; } }
+    @media (max-width: 767px) {
+      .section-partners .partners-container {
+        margin-bottom: 0; } }
   .section-partners .partner-wrp {
     padding: 35px 20px;
     display: flex;
@@ -2319,18 +2319,22 @@
     border: 1px solid #FFFFFF;
     background-color: #F8F8F8;
     border-radius: 18px;
-    margin-bottom: 18px; }
+    margin-bottom: 18px;
+    height: 120px; }
     @media (max-width: 1679px) {
       .section-partners .partner-wrp {
+        height: 90px;
         padding: 30px 20px;
         border-radius: 16px;
         margin-bottom: 16px; } }
     @media (max-width: 1441px) {
       .section-partners .partner-wrp {
+        height: 80px;
         padding: 28px 18px;
         border-radius: 14px; } }
     @media (max-width: 1281px) {
       .section-partners .partner-wrp {
+        height: 65px;
         padding: 22px 18px;
         border-radius: 12px; } }
     .section-partners .partner-wrp img {
